<resources>
    <string name="app_name">MyPortfolioApp</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Portfolio app</string>
    <string name="toolbartitle">My App Portfolio</string>
    <string name="mynanodegreeapps">My Nanodegree Apps!</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Scores App</string>
    <string name="app3">Library App</string>
    <string name="app4">Build It Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone:My Own App</string>

</resources>
