<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:id="@+id/app1"
    android:background="#39423131">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mynanodegreeapps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app1"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:background="#ff9933"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app2"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ff9933"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:onClick="displayToast"/>

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#d54b9b35"
        android:onClick="displayToast" />

    <Button
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:text="@string/app6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#d54b9b35"
        android:onClick="displayToast"
        android:textColor="#ffffff" />

</RelativeLayout>
